# python_to_run_sql

./: README.md
sql_script_project/: pyproject.toml  query.sql  run_sql.py
