[tool.poetry]
name = "sql-script-project"
version = "0.1.0"
description = ""
authors = ["MalshaDissanayake <dmkmd333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
